k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-template-app
  labels:
    app: devops-template-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-template-app
  template:
    metadata:
      labels:
        app: devops-template-app
    spec:
      containers:
        - name: devops-template-app
          image: andersonmarquesdocker/devops-template-app:1.0
          ports:
            - containerPort: 8080
