k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-template-app
  labels:
    app: devops-template-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-template-app
  template:
    metadata:
      labels:
        app: devops-template-app
    spec:
      containers:
        - name: devops-template-app
          image: andersonmarquesdocker/devops-template-app:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devops-template-app
spec:
  selector:
    app: devops-template-app
  ports:
    - name: http
      protocol: TCP
      port: 80          # expõe 80 no Service
      targetPort: 8080  # seu app escuta em 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-template-app
spec:
  ingressClassName: nginx
  rules:
    - host: devops-template-app.localtest.me  # <- .me aponta para 127.0.0.1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-template-app
                port:
                  number: 80
